--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                   >Студия</a
                 >
               </li>
-              <li>
+              <li class="link-p">
                 <a
                   href="./portfolio.html"
                   class="link"
@@ -80,7 +80,7 @@
     <main>
       <div class="portfolio-main">
         <div class="buttons">
-          <a href="" class="button primary" style="text-decoration: none"
+          <a href="" class="button secondary" style="text-decoration: none"
             >Все</a
           >
           <a href="" class="button secondary" style="text-decoration: none"
@@ -98,8 +98,17 @@
         </div>
 
         <ul>
-          <li>
-            <img src="./Images/computer.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/computer.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Технокряк</p>
             <p class="category">Веб-сайт</p>
           </li>
