--- a/portfolio.html
+++ b/portfolio.html
@@ -113,50 +113,122 @@
             <p class="category">Веб-сайт</p>
           </li>
 
-          <li>
-            <img src="./Images/basketball.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/basketball.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Постер New Orlean vs Golden Star</p>
             <p class="category">Дизайн</p>
           </li>
 
-          <li>
-            <img src="./Images/seafood.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/seafood.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Ресторан Seafood</p>
             <p class="category">Приложение</p>
           </li>
 
-          <li>
-            <img src="./Images/headphones.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/headphones.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Проект Prime</p>
             <p class="category">Маркетинг</p>
           </li>
 
-          <li>
-            <img src="./Images/boxes.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/boxes.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Проект Boxes</p>
             <p class="category">Приложение</p>
           </li>
 
-          <li>
-            <img src="./Images/inspiration.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/inspiration.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Inspiration has no Borders</p>
             <p class="category">Веб-сайт</p>
           </li>
 
-          <li>
-            <img src="./Images/book.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/book.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Издание Limited Edition</p>
             <p class="category">Дизайн</p>
           </li>
 
-          <li>
-            <img src="./Images/tag.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/tag.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Проект LAB</p>
             <p class="category">Маркетинг</p>
           </li>
 
-          <li>
-            <img src="./Images/growingbusiness.jpg" alt="" />
+          <li class="portfolio-card">
+            <div class="card-thumb">
+              <img src="./Images/growingbusiness.jpg" alt="" />
+            </div>
+            <div class="card-action">
+              <span
+                >Технокряк это современная площадка распространения
+                коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</span
+              >
+            </div>
             <p class="name">Growing Business</p>
             <p class="category">Приложение</p>
           </li>
